Fixing some colors and left aligning title

--- a/scss/_var.scss
+++ b/scss/_var.scss
@@ -30,6 +30,6 @@ $brand-light : $pear;
 $pri-color: $sushi;
 $sec-color: $coral-reef;
 $sec-shadow: $kokoda;
-$sec-highlight: mix($white, $sec-color, 40%);
+$sec-highlight: mix($white, $sec-color, 60%);
 $highlight: mix($white, $pri-color, 60%);
-$shadow: 	mix($black, $pri-color, 30%);
+$shadow: 	mix($black, $pri-color, 40%);
